--- a/Task_5.ipynb
+++ b/Task_5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJWDaKfCU6AB69cHjO9t0W",
+      "authorship_tag": "ABX9TyMAj2UPHhJjSdpYpiXgiZhG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,7 +88,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "import pandas as pd\n",
         "df1=pd.read_csv('takehome_user_engagement.csv')"
       ],
@@ -119,7 +118,8 @@
     {
       "cell_type": "code",
       "source": [
-        "takehome_users = pd.read_csv('takehome_users.csv',encoding='ISO-8859-1')"
+        "import pandas as pd\n",
+        "df2=pd.read_csv('takehome_users.csv',encoding='ISO-8859-1')"
       ],
       "metadata": {
         "id": "5STtF59L_yRa"
@@ -128,16 +128,14 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "Considering the 'adopted users' for 7 days period,it is suitable to seperate the data based on 7-day-period.\n",
-        "This could be easy to seperate the data for further analysis."
+        "1.Considering the 'adopted users' for 7 days period,it is suitable to seperate the data based on 7-day-period.\n",
+        "2.This could be easy to seperate the data for further analysis."
       ],
       "metadata": {
-        "id": "EJuH3bfNBfee"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "IcqzLX1TCgSZ"
+      }
     }
   ]
 }
